# voxel

./: Cargo.toml
assets/shaders/: common.wgsl  draw.wgsl  draw_import.wgsl  draw_procedural.wgsl  sdf.wgsl  test.wgsl  voxel.wgsl  voxel_common.wgsl  voxel_prepass.wgsl  voxel_read.wgsl  voxel_tree.wgsl  voxel_write.wgsl
src/: camera.rs  gpu_buffer_allocator.rs  gpu_rw_buffer.rs  import.rs  main.rs  material.rs  math.rs  render.rs  ui.rs  voxel_tree.rs
