[package]
name = "voxel_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["file_watcher"] }
bevy-inspector-egui = { git = "https://github.com/kristoff3r/bevy-inspector-egui" }
crossbeam-channel = "0.5.13"
dot_vox = "5.1.1"
